# lmas

./: .gitignore  BUILD_REPORT.md  CHANGELOG.md  CLI_REFERENCE.md  DEVELOPMENT_PROVENANCE.md  INSTALLATION.md  KNOWN_LIMITATIONS.md  LICENSE  LINEAGE_AND_ATTRIBUTION.md  MANIFEST.in  NATIVE_READERS.md  POLARITY_PRODUCT_FORMAT.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  USER_MANUAL.md  VALIDATION_SUMMARY.md  WHAT_LMAS_CAN_DO.md  environment.yml  install.py  pyproject.toml
docs/: CLI_REFERENCE.md  INSTALLATION.md  README.md  RELEASE_NOTES.md  USER_MANUAL.md  WHAT_LMAS_CAN_DO.md
examples/: 3d_batch_manifest.json  README.md  figure_batch_manifest.json  generic_network_events.csv  startup_profile.lmas-profile.yaml  synthetic_demo.lmas-project.yaml  truncate_lma_dat.py
licenses/: README.md
requirements/: core.txt  full.txt  gui.txt  visualization.txt
src/lmas/: __init__.py  animation_batch.py  array_info.py  cli.py  coordinates.py  data_header.py  demo.py  entrypoint.py  errors.py  figure_batch.py  figure_export.py  glm.py  group_overlay.py  help_docs.py  interactions.py  launcher.py  model.py  output_naming.py  (+10 more)
tests/: test_charge_analysis.py  test_charge_analysis_layout.py  test_charge_region_label.py  test_data_header.py  test_glm_native_reader.py  test_glm_pixel_accumulation.py  test_gui_contract.py  test_launcher.py  test_network_overlays.py  test_packaged_hybrid_demo.py  test_polarity_product.py  test_precision.py  test_precision_figure_metadata.py  test_product_export.py  test_profile_project_formats.py  test_project_startup_view.py  test_public_1_4_0_release.py  test_release_1_1_fixes.py  test_release_1_2_0_features.py  test_release_1_6_0_features.py  test_release_1_6_2_responsiveness.py  test_release_1_6_3_corrective.py  test_release_docs.py  test_release_identity.py  test_satellite_overlay_dev4.py  test_satellite_overlay_dev5.py  test_satellite_overlay_dev6.py  test_satellite_overlay_dev7.py  test_selection_contract.py  test_selection_recovery.py  test_source_selection.py  test_window_geometry.py
(+92 files in other folders)
